# QuantOffice

./: .gitignore  CHANGELOG.md  Makefile  README.md  deploy.sh  manifest.json  pyproject.toml  requirements-all.txt  requirements-axon.txt  requirements-dev.txt  requirements-rl.txt  requirements.txt  run.py  uv.toml
deploy/: README.md
deploy/nginx/: quantoffice.conf
deploy/scripts/: start-frontend-dev.sh
deploy/supervisor/: quantoffice-frontend.conf  quantoffice.conf
docker/: Dockerfile  README.md  docker-compose.yml
docs/: QuantOffice_Axon_Integration.md  QuantOffice_Plugin_Architecture.md  QuantOffice_Project_Plan.md  QuantOffice_Showcase.html
frontend/: .gitignore  bunfig.toml  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  ws.ts
frontend/src/components/AgentAvatar/: AgentAvatar.module.css  AgentAvatar.tsx
frontend/src/components/Layout/: RightPanel.module.css  RightPanel.tsx  Sidebar.module.css  Sidebar.tsx  TopBar.module.css  TopBar.tsx  TopNav.module.css  TopNav.tsx
frontend/src/components/PixelOffice/: AgentCharacter.module.css  AgentCharacter.tsx  OfficeScene.module.css  OfficeScene.tsx  Workstation.module.css  Workstation.tsx
frontend/src/lib/: agentMeta.ts
frontend/src/pages/: AgentsPage.tsx  BacktestsPage.tsx  ChatPage.tsx  DashboardPage.tsx  Pages.module.css  PixelOfficePage.tsx  ReportsPage.tsx  RiskPage.tsx  SettingsPage.tsx  StrategiesPage.tsx  TradesPage.tsx
frontend/src/plugins/quant-office/: index.tsx  manifest.json
frontend/src/stores/: agentStore.ts  uiStore.ts
frontend/src/styles/: global.css  pixel.css  reset.css
frontend/src/types/: index.ts
godot_project/: project.godot
godot_project/scenes/: office.tscn
godot_project/scripts/: office_manager.gd
quant_office/: __init__.py  app.py  cli.py  config.py  demo.py  logging_config.py  plugin.py
quant_office/agents/: __init__.py  base.py  chief_agent.py  data_agent.py  execution_agent.py  report_agent.py  risk_agent.py  strategy_agent.py
quant_office/api/: __init__.py  agents.py  backtests.py  chat.py  dashboard.py  reports.py  risk.py  settings.py  strategies.py  trades.py
quant_office/core/: __init__.py  agent_scheduler.py  engine_adapter.py  event_publisher.py  exchange_client.py  llm_client.py  risk_monitor.py  runtime_config.py  websocket_manager.py
quant_office/data/: __init__.py  arrow_store.py  database.py  models.py  redis_cache.py
quant_office/services/: __init__.py  agent_service.py  api_schemas.py  backtest_service.py  market_data_service.py  notification_service.py  risk_service.py  strategy_service.py
reports/: e2e_20260711T095549Z.json  e2e_20260711T095951Z.json  e2e_20260714T032607Z.json  e2e_20260714T055421Z.json
scripts/: e2e_smoke.py
tests/: conftest.py  test_api_routes.py  test_app.py  test_axon_quant_integration.py  test_core.py
